--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -25,10 +25,10 @@
             </div>
         </div>
     </div>
-<script src="main.js"></script>
-<script src="checkWeather.js"></script>
-<script src="checkForecast.js"></script>
-<script src="applyCss.js"></script>
-<script src="errorHandling.js"></script>
+<script src="app.js"></script>
+<script src="components/check_weather.js"></script>
+<script src="components/check_forecast.js"></script>
+<script src="components/apply_css.js"></script>
+<script src="components/error_handling.js"></script>
 </body>
 </html>
