--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
 
     <h2>To-Do List</h2>
 
-    <div>
+    <div class="div-task">
         <input type="text" id="taskInput" placeholder="Enter a task">
         <button id="button" onclick="addTask()">Add Task</button>
     </div>
@@ -18,7 +19,7 @@
     <ul id="taskList">
         
     </ul>
-
+</div>
     <script src="script.js"></script>
 </body>
 </html>
